--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="
     width=device-width,initial-scale=1.0,maximum-scala=1,user-scalable=0">
     <title>my-project</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app"></div>
+    <div id="main">
+        <mavon-editor v-model="value" />
+    </div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
